--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,6 @@ set(LIBRARY_VERSION "${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}")
 IF(NOT WIN32)
 include(FindPkgConfig)
 
-pkg_search_module(TANGO_PKG REQUIRED tango)
 ENDIF()
 
 find_package(MySQL)
@@ -65,6 +64,8 @@ IF(WIN32)
   include_directories(${PROJECT_NAME} PUBLIC "$ENV{TANGO_PATH}/include")
   link_directories("$ENV{TANGO_PATH}/bin")
   link_directories("$ENV{TANGO_PATH}/lib")
+  include_directories(${PROJECT_NAME} PUBLIC "C:/Program Files/MySQL/MySQL Server 5.7/include")
+  link_directories("C:/Program Files/MySQL/MySQL Server 5.7/lib")
   message("$ENV{TANGO_PATH}/include")
   
   add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
@@ -92,6 +93,7 @@ endif()
                                                 $ENV{TANGO_PATH}/bin/msvcstubd.lib)
     target_link_libraries(${PROJECT_NAME} PUBLIC ws2_32 mswsock advapi32 comctl32 odbc32)
     target_link_libraries(${PROJECT_NAME} PUBLIC $ENV{TANGO_PATH}/lib/pthreadVC2.lib)
+    target_link_libraries(${PROJECT_NAME} PUBLIC libmysql)
   IF(MSVC90)
     target_link_libraries(${PROJECT_NAME} PUBLIC $ENV{TANGO_PATH}/lib/libzmq-v90-mt-gd-4_1_7.lib)
   ELSEIF(MSVC10)
@@ -110,6 +112,7 @@ endif()
                                                 $ENV{TANGO_PATH}/bin/msvcstub.lib)
     target_link_libraries(${PROJECT_NAME} PUBLIC ws2_32 mswsock advapi32 comctl32 odbc32)
     target_link_libraries(${PROJECT_NAME} PUBLIC $ENV{TANGO_PATH}/lib/pthreadVC2.lib)
+    target_link_libraries(${PROJECT_NAME} PUBLIC libmysql)
   IF(MSVC90)
     target_link_libraries(${PROJECT_NAME} PUBLIC $ENV{TANGO_PATH}/lib/libzmq-v90-mt-4_1_7.lib)
   ELSEIF(MSVC10)
